--- a/css7.css
+++ b/css7.css
@@ -71,6 +71,8 @@ html, body {
   padding: 12px;
   box-shadow: 0 6px 14px rgba(0,0,0,0.06);
   text-align: center;
+    position: relative;
+
 }
 
 .tile-img {
